<resources>
    <string name="app_name">Gnss Analyzer</string>
    <string name="nav_satellite">Satellite Status</string>
    <string name="nav_map">Map View</string>
    <string name="nav_report">Report Findings</string>
    <string name="nav_settings">Settings</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">N</string>
    <string name="longitude">E</string>
    <string name="gps_time">GPS TIME</string>
    <string name="gps_date">GPS DATE</string>
</resources>
