<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_headers"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/gps_date"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/gps_time"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_headers"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/latitude"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:gravity="end"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/longitude"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />

            <TextView
                android:id="@+id/lon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:gravity="end"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_thin" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_headers"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_satellite"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            android:scrollbars="none" />
    </LinearLayout>

</LinearLayout>